vaultclient.tf
data "template_file" "user_data" {
  template = file("${path.module}/webapp.sh")
}

resource "aws_instance" "vault-client" {                    
  vpc_security_group_ids      = aws_security_group.sg_vpc.id 
  ami                         = var.ami 
  instance_type               = var.instance_type
  key_name                    = var.key
  associate_public_ip_address = true
  user_data                   = data.template_file.user_data.rendered
  iam_instance_profile        = aws_iam_instance_profile.vault-client.id

  tags = {
    Name = "vault-client"
  }
}
